Mon Jun 13 17:02:34 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#use_ssl?): require 'openssl' only when
	  https is needed. fixes r31933.

Mon Jun 13 14:35:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* lib/cmath.rb (CMath.cbrt): returns the principal value of the cube
	  root of the argument.  fix #3676

	* test/test_cmath.rb (test_cbrt_returns_principal_value_of_cube_root):
	  test for the above change.

Mon Jun 13 14:17:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* lib/test/unit.rb (Test::Unit::GlobOption#non_options): fix typo.

Mon Jun 13 13:04:20 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_digest.c: fix error for digests that have no oid
	(e.g. DSS1).
	* test/openssl/test_digest.c: add tests for this.

Mon Jun 13 12:51:51 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/yaml.rb: load psych only when syck is not loaded.

Mon Jun 13 12:23:39 2011  NARUSE, Yui  <naruse@ruby-lang.org>

Mon Jun 13 12:23:39 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/psych/lib/psych/deprecated.rb (Object#to_yaml_properties):
	  undef to_yaml_properties before redefine it.

	* ext/syck/lib/syck/rubytypes.rb: ditto.

Mon Jun 13 11:30:10 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_digest.c: allow Digests to be created by sn, ln or
	  oid.
	* test/openssl/test_digest.rb: add tests for this.
	  [Ruby 1.9 - Feature #4412] [ruby-core:35319]

Mon Jun 13 10:54:03 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/pkey_dh.c: corrected documentation.
	* test/openssl/utils.rb: add test key for DH.
	* test/openssl/test_pkey_dh.rb: add tests.

Mon Jun 13 10:13:08 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/pkey_dh.c: clarify difference between DH#public_key and
	DH#pub_key in documentation.

Mon Jun 13 05:50:43 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* NEWS: introduce PKey.read.
